better unit tests for UserService